objects/vlocity_cmt__DecompositionRelationship__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__ConditionData__c</fullName>
        <label>Condition Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationDefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Destination (Default Quantity)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationMaxQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Destination (Max Quantity)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationMinQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Destination (Min Quantity)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination (Product)</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Decomposition Relationships (Destination Product)</relationshipLabel>
        <relationshipName>SourceDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MappingsData__c</fullName>
        <label>Mappings Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RequireReservation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Reservation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceDefaultQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Source (Default Quantity)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceMaxQuantity__c</fullName>
        <label>Source (Max Quantity)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceMinQuantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Source (Min Quantity)</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Decomposition Relationships (Source Product)</relationshipLabel>
        <relationshipName>DestinationDecompositionRelationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__XORGroup__c</fullName>
        <label>XOR Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Decomposition Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__SourceProductId__c</columns>
        <columns>vlocity_cmt__DestinationProductId__c</columns>
        <columns>vlocity_cmt__MappingsData__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Decomposition Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decomposition Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>